# nixos-config

./: .envrc  .gitignore  .replit  AGENTS.md  Mac system hotkey customisation_ · Issue #518 · nix-darwin_nix-darwin.html  Nix-Darwin Mission Control Shortcuts.txt  README.md  config.nix  devenv.nix  devenv.yaml  flake.nix  replit.nix
.agents/skills/darwin-launchd-debugging/: SKILL.md
.agents/skills/nix-editing/: SKILL.md
.agents/skills/nixos-config-activation-safety/: SKILL.md
.agents/skills/tmux-and-shell-workflows/: SKILL.md
.github/workflows/: flake-check.yml
attached_assets/: Pasted-devenv-test-Overriding-devenv-to-devenv-FNxlwV-Using-Cachix-caches-devenv-Building-tests-in-3-1755016192419_1755016192419.txt
configurations/darwin/: F2400216.nix  tfmbp.nix
configurations/home/: F2200346.nix  hub.nix  hubertbehaghel.nix
configurations/nixos/linux-builder/: default.nix
configurations/nixos/mele-hub/: default.nix  hardware-configuration.nix  install-mele-hub.sh
docs/: mele-syncthing-guide.md  yubikey-guide.md  yubikey.md
githooks/: post-commit
home/: default.nix  nix-dev.nix
home/git/: default.nix
home/nix-darwin/: bepo.nix  niv-apps.nix
home/shell/: default.nix
home/zsh/: default.nix
keys/: 5137D6FF80B95202-2025-11-02.asc  builder_ed25519.pub  id_ed25519_yubikey.pub  utm-builder_ed25519.pub
lib/: template-utils.nix
machines/: linux-builder.nix  tfmbp.nix
machines/linux-builder/: default.nix
marketplace/: README.md  lib.nix  memory.md
marketplace/hooks/: notification.nix
marketplace/mcp/: devenv.nix
marketplace/plugins/devenv-workflow/: README.md  package.json
marketplace/plugins/domain-tree/: README.md  package.json
marketplace/plugins/spec-driven/: README.md  package.json
marketplace/plugins/spec-tdd/: README.md  package.json
marketplace/plugins/ux-stories/: README.md  package.json
marketplace/settings/: claude-code.nix  opencode.nix
marketplace/skills/devenv-project-workflow/: SKILL.md
marketplace/skills/grill-me/: SKILL.md
marketplace/skills/spec-driven-tdd/: SKILL.md
modules/common/: local-network.nix  myusers.nix
modules/darwin/: README.md  default.nix  homebrew-apps.nix  system-defaults.nix  utm-builder.nix  zsh-completion-fix.nix
modules/darwin/keyboard/: config.nix  default.nix  shortcuts.nix  xpc_set_event_stream_handler.nix
modules/darwin/nivApps/: default.nix  sources.json
modules/flake/: activate-home.nix  mele-hub-iso.nix  nixpkgs.nix  overlays.nix  templates.nix  toplevel.nix
modules/flake-parts/: devshell.nix
modules/home/: README.md  darwin-only.nix  default.nix  dev.nix  gpg.nix  linux-only.nix  nix-dev.nix  nix.nix  pass-launchers.nix  starship.nix
modules/home/alacritty/: default.nix
modules/home/browserpass/: default.nix
modules/home/darwin/: aerospace.nix  apps.nix  bepo.nix  fonts.nix  hidutil-remap.nix  syncthing.nix
modules/home/dircolors/: default.nix
modules/home/direnv/: default.nix
modules/home/emacs/: default.nix
modules/home/firefox/: default.nix
modules/home/ghostty/: common.nix  default.nix
modules/home/git/: .gitconfig  default.nix
modules/home/hammerspoon/: default.nix  draw.lua  hotkeys.lua  init.lua  (+2 more)
modules/nixos/: common.nix  default.nix  utm-builder-image.nix
nix-darwin/: default.nix  niv-managed-dmg-apps.nix  system-defaults.nix  yabai.nix
nix-darwin/keyboard/: default.nix  xpc_set_event_stream_handler.nix
nix-darwin/pkgs/: overlay.nix
nix-darwin/sketchybar/: default.nix
nix-darwin/skhd/: skhd.conf
nixos/: current-location.nix  default.nix  nix.nix
nixos/caches/: emacs.nix
nixos/desktop/: fonts.nix
nixos/self/: make-me-admin.nix
overlays/: default.nix  isync-oauth.nix
scripts/: build-utm-builder-qcow2.sh  install-mele-hub.sh
templates/: README.md
templates-devenv/: README.md  template-utils.nix
templates-devenv/guile-basic/: .gitignore  README.md  devenv.nix  main.scm
templates-devenv/guile-hall/: .gitignore  README.md  devenv.nix  devenv.yaml  math.scm
templates-devenv/pharo-basic/: .editorconfig  .gitignore  README.md  devenv.nix
templates-devenv/python-basic/: .editorconfig  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml
templates-devenv/python-basic/src/python_basic/: __init__.py  main.py
templates-devenv/python-basic/template-resources/: pyproject.toml
templates-devenv/python-basic/template-resources/src/python_basic/: main.py
templates-devenv/python-basic/template-resources/tests/: test_main.py
templates-devenv/python-basic/tests/: __init__.py  test_main.py
templates-devenv/scala-basic/: .gitignore  README.md  build.sbt  devenv.nix
templates/guile-basic/: .editorconfig  .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix  main.scm  template-utils.nix
templates/guile-hall/: .editorconfig  .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix  main.scm  template-utils.nix
templates/pharo-basic/: devenv.nix
templates/python-basic/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml
templates/python-basic/src/python_basic/: main.py
templates/python-basic/template-resources/: pyproject.toml
templates/python-basic/template-resources/src/python_basic/: __init__.py
templates/python-basic/tests/: test_main.py
templates/scala-basic/: .editorconfig  .gitignore  .scalafmt.conf  README.md  build.sbt  devenv.nix  flake.nix
templates/shared/: flake.nix
tests/: mail-sync-autocorrect.bats  marketplace.nix  opencode-context7.nix  opencode-model-config-modes.nix  pi-module.nix  run-mail-sync-autocorrect-tests.sh  run-mail-tray-e2e.sh  test-templates.nix  video-editing.nix
users/: config.nix
(+121 files in other folders)
